# Python

./: game_doan_so.py  quan_ly_diem.py  to_do.py
BriefTour-Packages/: expenses.txt  manage_personal_expenses.py
OOP/: manager_employee.py
Poetry/ecommerce_project/: pyproject.toml
Poetry/ecommerce_project/data/: data.json
Poetry/ecommerce_project/ecommerce_project/: cart.py  database.py  main.py  models.py  user.py
Poetry/ecommerce_project/tests/: test_cart.py  test_models.py  test_user.py
Poetry/weather_info_fetcher/: pyproject.toml
Poetry/weather_info_fetcher/tests/: test_weather.py
Poetry/weather_info_fetcher/weather_info_fetcher/: __init__.py  weather.py
Practice/Inheritant/: manager_in_school.py
Practice/multithread/multithread_game/: game.py
Practice/multithread/multithreaded_downloader/: downloader.py
Practice/multithread/multithreaded_downloader/downloads/: downloaded_file_3.html  downloaded_file_4.html  downloaded_file_5.html
p-1-2-3-4-5-7/: game_doan_so.py  quan_ly_diem.py  student_scores.json  to_do.py
