[tool.poetry]
name = "ecommerce-project"
version = "0.1.0"
description = ""
authors = ["ACER <ACER@LAPTOP-CKSRJ70V>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
